--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="187" height="96" alt="Логотип сайта">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">Информация</li>
+          <li class="navigation-item">Фото и видео</li>
+          <li class="navigation-item">Карта штата</li>
+          <li class="navigation-item">Гостиницы</li>
+        </ul>
+      </nav>
+    </header>>
+    
+    <main class="container">
+      <section class="hello">
+        <h1>Welcome to the gorgeous Sedona</h1>
+        <cite>Because the Grand Canyon sucks!</cite>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <p>
+        <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+      </p>
 
+      <section  class="reasons">
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <!-- Здесь будут причины -->
+      </section>
+
+      <section class="interest">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <p class="hashtag">#visitsedona</p>
+
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#"></a>Твитер</li>
+          <li><a class="social-button" href="#"></a>Фейсбук</li>
+          <li><a class="social-button" href="#"></a>Ютубе</li>
+        </ul>
+      </div>
+
+      <p class="footer-copyright">
+        Website by<img src="#" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
+      </p>
+    </footer>
   </body>
 </html>
