Добавил ссылки в навигацию и в подвал, разметил рейтинговые звездочки, исправил маленькие ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,13 @@
           <img src="img/index-logo.svg" width="187" height="96" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
-          <li class="navigation-item">Информация</li>
-          <li class="navigation-item">Фото и видео</li>
-          <li class="navigation-item">Карта штата</li>
-          <li class="navigation-item">Гостиницы</li>
+          <li class="navigation-item"><a href="#">Информация</a></li>
+          <li class="navigation-item"><a href="#">Фото и видео</a></li>
+          <li class="navigation-item"><a href="#">Карта штата</a></li>
+          <li class="navigation-item"><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
-    </header>>
+    </header>
 
     <main class="container">
       <section class="catalog">
@@ -33,7 +33,12 @@
             <a class="button" href="#"> Подробнее</a>
             <a class="button" href="#">Забронировать</a>
             <span>Рейтинг: 8,5</span>
-            <!-- Как сделать звездочки? -->
+            <ul class="rating-stars">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
           </li>
           <li class="catalog-item">
             <img src="#" width="180" height="120" alt="">
@@ -46,6 +51,11 @@
             <a class="button" href="#"> Подробнее</a>
             <a class="button" href="#">Забронировать</a>
             <span>Рейтинг: 8,9</span>
+            <ul class="rating-stars">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
           </li>
           <li class="catalog-item">
             <img src="#" width="180" height="120" alt="">
@@ -58,6 +68,10 @@
             <a class="button" href="#"> Подробнее</a>
             <a class="button" href="#">Забронировать</a>
             <span>Рейтинг: 9,2</span>
+            <ul class="rating-stars">
+              <li></li>
+              <li></li>
+            </ul>
           </li>
         </ul>
       </section>
@@ -68,9 +82,9 @@
       
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#"></a>Твитер</li>
-          <li><a class="social-button" href="#"></a>Фейсбук</li>
-          <li><a class="social-button" href="#"></a>Ютубе</li>
+          <li><a class="social-button" href="#">Твитер</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Ютубе</a></li>
         </ul>
       </div>
       
@@ -79,4 +93,4 @@
       </p>
     </footer>
   </body>
-</html>>
+</html>
