--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="navigation-item">Гостиницы</li>
         </ul>
       </nav>
-    </header>>
+    </header>
     
     <main class="container">
       <section class="hello">
@@ -37,6 +37,9 @@
       <section class="interest">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+
+        <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
+
       </section>
     </main>
 
