Дополнение к предыдущему коммиту

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
           <img src="img/index-logo.svg" width="187" height="96" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
-          <li class="navigation-item">Информация</li>
-          <li class="navigation-item">Фото и видео</li>
-          <li class="navigation-item">Карта штата</li>
-          <li class="navigation-item">Гостиницы</li>
+          <li class="navigation-item"><a href="#">Информация</a></li>
+          <li class="navigation-item"><a href="#">Фото и видео</a></li>
+          <li class="navigation-item"><a href="#">Карта штата</a></li>
+          <li class="navigation-item"><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
