--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header>
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="187" height="96" alt="Логотип сайта">
+          <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item"><a href="#">Информация</a></li>
@@ -23,7 +23,7 @@
       <section class="catalog">
         <ul class="catalog-list">
           <li class="catalog-item">
-            <img src="#" width="180" height="120" alt="">
+            <img src="img/catalog-photo-1.jpg" width="180" height="120" alt="Amara resrt & spa">
             <a href="catalog-item.html">
               <span class="catalog-item-title">Amara resrt & spa</span>
             </a>
@@ -41,7 +41,7 @@
             </ul>
           </li>
           <li class="catalog-item">
-            <img src="#" width="180" height="120" alt="">
+            <img src="img/catalog-photo-2.jpg" width="180" height="120" alt="Desert quail inn">
             <a href="catalog-item.html">
               <span class="catalog-item-title">Desert quail inn</span>
             </a>
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li class="catalog-item">
-            <img src="#" width="180" height="120" alt="">
+            <img src="img/catalog-photo-3.jpg" width="180" height="120" alt="Villas at poco diablo">
             <a href="catalog-item.html">
               <span class="catalog-item-title">Villas at poco diablo</span>
             </a>
@@ -80,16 +80,16 @@
     <footer class="main-footer">
       <p class="hashtag">#visitsedona</p>
       
-      <div class="footer-social">
+      <div class="footer-social" style="background-color:cornflowerblue"> <!-- Для видимости, что там есть иконки -->
         <ul>
-          <li><a class="social-button" href="#">Твитер</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Ютубе</a></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/twitter.svg" alt="Твитер"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/youtube.svg" alt="Ютубе"></li>
         </ul>
       </div>
       
       <p class="footer-copyright">
-        Website by<img src="#" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
+        Website by<img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
       </p>
     </footer>
   </body>
