--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="187" height="96" alt="Логотип сайта">
+          <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item"><a href="#">Информация</a></li>
@@ -21,7 +21,9 @@
     
     <main class="container">
       <section class="hello">
-        <h1>Welcome to the gorgeous Sedona</h1>
+        <img src="img/svg-sedona/intro-welcome.svg" width="800" height="200" alt="Welcome">
+        <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
+        <!-- Лучше скрыть или вообще стереть содержимое тега <cite>, так как здесь будет картинка? -->
         <cite>Because the Grand Canyon sucks!</cite>
       </section>
 
@@ -46,16 +48,16 @@
     <footer class="main-footer">
       <p class="hashtag">#visitsedona</p>
 
-      <div class="footer-social">
+      <div class="footer-social" style="background-color:cornflowerblue"> <!-- Для видимости, что там есть иконки -->
         <ul>
-          <li><a class="social-button" href="#"></a>Твитер</li>
-          <li><a class="social-button" href="#"></a>Фейсбук</li>
-          <li><a class="social-button" href="#"></a>Ютубе</li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/twitter.svg" alt="Твитер"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/youtube.svg" alt="Ютубе"></li>
         </ul>
       </div>
 
       <p class="footer-copyright">
-        Website by<img src="#" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
+        Website by<img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
       </p>
     </footer>
   </body>
