--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта">
+          <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта" aria-label="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item"><a href="#">Информация</a></li>
@@ -23,8 +23,7 @@
       <section class="hello">
         <img src="img/svg-sedona/intro-welcome.svg" width="800" height="200" alt="Welcome">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
-        <!-- Лучше скрыть или вообще стереть содержимое тега <cite>, так как здесь будет картинка? -->
-        <cite>Because the Grand Canyon sucks!</cite>
+        <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
       </section>
 
       <p>
@@ -42,22 +41,52 @@
 
         <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
 
+        <form class="search-form" action="" method="POST">
+          <p>
+            <label for="arrival-date">Дата заезда:</label>
+            <input id="arrival-date" type="date" name="arrival" value="24 апреля 2017">
+          </p>
+
+          <p>
+            <label for="departure-date">Дата выезда:</label>
+            <input id="departure-date" type="date" name="departure" value="4 июля 2017">
+          </p>
+
+          <p>
+            <label for="calc-adults">Взрослые:</label>
+            <span class="minus">-</span>
+            <input id="calc-adults" type="text" name="adults" value="2">
+            <span class="plus">+</span>
+          </p>
+
+          <p>
+            <label for="calc-children">Дети:</label>
+            <span class="minus">-</span>
+            <input id="calc-children" type="text" name="children" value="0">
+            <span class="plus">+</span>
+          </p>
+
+          <button class="search-button" type="submit">Найти</button>
+          <!-- Или вот так: <a class="search-button" type="button" href="#">Найти</a> Как лучше? -->
+        </form>
+
       </section>
     </main>
 
     <footer class="main-footer">
-      <p class="hashtag">#visitsedona</p>
+      <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
 
       <div class="footer-social" style="background-color:cornflowerblue"> <!-- Для видимости, что там есть иконки -->
         <ul>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/twitter.svg" alt="Твитер"></li>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук"></li>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/youtube.svg" alt="Ютубе"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></li>
+          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></li>
         </ul>
       </div>
 
       <p class="footer-copyright">
-        Website by<img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy"><a href="https://htmlacademy.ru">html academy</a>
+        Website by<img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy">
+        <a href="https://htmlacademy.ru">html academy</a>
       </p>
     </footer>
   </body>
