Сменил <span> на <button> в форме поиска гостиниц

--- a/index.html
+++ b/index.html
@@ -54,20 +54,19 @@
 
           <p>
             <label for="calc-adults">Взрослые:</label>
-            <span class="minus">-</span>
+            <button class="minus">-</button>
             <input id="calc-adults" type="text" name="adults" value="2">
-            <span class="plus">+</span>
+            <button class="plus">+</button>
           </p>
 
           <p>
             <label for="calc-children">Дети:</label>
-            <span class="minus">-</span>
+            <button class="minus">-</button>
             <input id="calc-children" type="text" name="children" value="0">
-            <span class="plus">+</span>
+            <button class="plus">+</button>
           </p>
 
           <button class="search-button" type="submit">Найти</button>
-          <!-- Или вот так: <a class="search-button" type="button" href="#">Найти</a> Как лучше? -->
         </form>
 
       </section>
