--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -26,8 +29,8 @@
         <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
       </section>
 
-      <p>
-        <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+      <p class="attract">
+        <b>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
       </p>
 
       <section  class="reasons">
@@ -37,7 +40,7 @@
 
       <section class="interest">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-instruction">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
 
@@ -75,17 +78,17 @@
     <footer class="main-footer">
       <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
 
-      <div class="footer-social" style="background-color:cornflowerblue"> <!-- Для видимости, что там есть иконки -->
-        <ul>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></li>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></li>
-          <li><a class="social-button" href="#"></a><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></li>
+      <div class="footer-social">
+        <ul class="footer-social-list">
+          <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
+          <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
+          <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
         </ul>
       </div>
 
       <p class="footer-copyright">
-        Website by<img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy">
-        <a href="https://htmlacademy.ru">html academy</a>
+        Website by
+        <a href="https://htmlacademy.ru"><img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy"></a>
       </p>
     </footer>
   </body>
