Revert "Подключил ссылку каталога гостиниц на главной стр."
This reverts commit 840acb9c220711fddda3e0d02528bb4a7f8935c8.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <header>
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
+        <a class="main-header-logo">
           <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта" aria-label="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item"><a href="#">Информация</a></li>
           <li class="navigation-item"><a href="#">Фото и видео</a></li>
           <li class="navigation-item"><a href="#">Карта штата</a></li>
-          <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
+          <li class="navigation-item"><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
