--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="navigation-item"><a href="#">Информация</a></li>
           <li class="navigation-item"><a href="#">Фото и видео</a></li>
           <li class="navigation-item"><a href="#">Карта штата</a></li>
-          <li class="navigation-item"><a href="#">Гостиницы</a></li>
+          <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
