--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта" aria-label="Логотип сайта">
         </a>
         <ul class="navigation-list">
