--- a/catalog.html
+++ b/catalog.html
@@ -10,14 +10,14 @@
   <body>
     <header>
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
+        <a class="main-header-logo">
           <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта" aria-label="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item"><a href="#">Информация</a></li>
           <li class="navigation-item"><a href="#">Фото и видео</a></li>
           <li class="navigation-item"><a href="#">Карта штата</a></li>
-          <li class="navigation-item"><a class="item-active" href="#">Гостиницы</a></li>
+          <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
@@ -81,20 +81,24 @@
     </main>
 
     <footer class="main-footer">
-      <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
-      
-      <div class="footer-social">
-        <ul class="footer-social-list">
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
-        </ul>
+      <div class="main-footer-wrapper">
+        <div class="container">
+          <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
+
+          <div class="footer-social">
+            <ul class="footer-social-list">
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
+            </ul>
+          </div>
+
+          <p class="footer-copyright">
+            Website by
+            <a href="https://htmlacademy.ru"><img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy"></a>
+          </p>
+        </div> 
       </div>
-      
-      <p class="footer-copyright">
-        Website by
-        <a href="https://htmlacademy.ru"><img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy"></a>
-      </p>
     </footer>
   </body>
 </html>
