--- a/index.html
+++ b/index.html
@@ -11,24 +11,31 @@
     <header>
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/svg-sedona/logo-sedona.svg" width="187" height="96" alt="Логотип сайта" aria-label="Логотип сайта">
+          <img src="img/svg-sedona/logo-sedona.svg" width="138" height="70" alt="Логотип сайта" aria-label="Логотип сайта">
         </a>
-        <ul class="navigation-list">
-          <li class="navigation-item"><a href="#">Информация</a></li>
-          <li class="navigation-item"><a href="#">Фото и видео</a></li>
-          <li class="navigation-item"><a href="#">Карта штата</a></li>
-          <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
-        </ul>
+        <div class="main-navigation-wrapper">
+          <div class="navigation-container">
+            <ul class="navigation-list">
+              <li class="navigation-item"><a href="#">Информация</a></li>
+              <li class="navigation-item"><a href="#">Фото и видео</a></li>
+              <li class="navigation-item"><a href="#">Карта штата</a></li>
+              <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     
     <main class="container">
-      <section class="hello">
-        <img src="img/svg-sedona/intro-welcome.svg" width="800" height="200" alt="Welcome">
-        <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
-        <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
-      </section>
-
+      <div class="hello-container-wrapper">
+        <div class="hello-container">
+          <section class="hello">
+            <img src="img/svg-sedona/intro-welcome.svg" width="800" height="200" alt="Welcome">
+            <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
+            <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
+          </section>
+        </div>
+      </div>
       <p class="attract">
         <b>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
       </p>
@@ -76,20 +83,24 @@
     </main>
 
     <footer class="main-footer">
-      <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
+      <div class="main-footer-wrapper">
+        <div class="container">
+          <p class="hashtag" aria-label="Хэштег в социальных сетях">#visitsedona</p>
 
-      <div class="footer-social">
-        <ul class="footer-social-list">
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
-          <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
-        </ul>
+          <div class="footer-social">
+            <ul class="footer-social-list">
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
+            </ul>
+          </div>
+
+          <p class="footer-copyright">
+            Website by
+            <a href="https://htmlacademy.ru"><img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy"></a>
+          </p>
+        </div> 
       </div>
-
-      <p class="footer-copyright">
-        Website by
-        <a href="https://htmlacademy.ru"><img src="img/svg-sedona/logo-htmlacademy.svg" width="100" height="50" alt="Логотип html academy" aria-label="Логотип html academy"></a>
-      </p>
     </footer>
   </body>
 </html>
