Удалил лишний пробел

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <b>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
         </p>
 
-        <section  class="reasons">
+        <section class="reasons">
           <p class="tender">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           <ul class="main-reasons-list">
             <li class="main-reasons-item">
@@ -218,5 +218,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
