--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -15,14 +15,10 @@
             <img src="img/svg-sedona/logo-sedona.svg" width="138" height="70" alt="Логотип сайта" aria-label="Логотип сайта">
           </a>
           <ul class="navigation-list">
-            <div class="navigation-column-left">
               <li class="navigation-item"><a href="#">Информация</a></li>
               <li class="navigation-item"><a href="#">Фото и видео</a></li>
-            </div>
-            <div class="navigation-column-right">
               <li class="navigation-item"><a href="#">Карта штата</a></li>
               <li class="navigation-item item-active"><a href="catalog.html">Гостиницы</a></li>
-            </div>
           </ul>
         </nav>
       </header>
@@ -197,11 +193,11 @@
           </div>
           
           <div class="footer-social">
-            <ul class="footer-social-list">
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
-            </ul>
+              <ul class="footer-social-list">
+                <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" width="17" height="15" alt="Твитер" aria-label="Твитер"></a></li>
+                <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" width="12" height="22" alt="Фейсбук" aria-label="Фейсбук"></a></li>
+                <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" width="20" height="16" alt="Ютубе" aria-label="Ютубе"></a></li>
+              </ul>
           </div>
 
           <div class="footer-copyright">
