--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -15,14 +15,10 @@
             <img src="img/svg-sedona/logo-sedona.svg" width="138" height="70" alt="Логотип сайта" aria-label="Логотип сайта">
           </a>
           <ul class="navigation-list">
-            <div class="navigation-column-left">
               <li class="navigation-item"><a href="#">Информация</a></li>
               <li class="navigation-item"><a href="#">Фото и видео</a></li>
-            </div>
-            <div class="navigation-column-right">
               <li class="navigation-item"><a href="#">Карта штата</a></li>
               <li class="navigation-item"><a href="catalog.html">Гостиницы</a></li>
-            </div>
           </ul>
         </nav>
       </header>
@@ -33,7 +29,7 @@
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
           <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
 
-          <img class="hello-polygon" src="img/polygon.png" alt="Polygon">
+          <img class="hello-polygon" src="img/polygon.png" alt="Polygon" width="100%" height="57px">
         </section>
         <p class="attract">
           <b>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
@@ -87,7 +83,7 @@
                     <p class="main-reasons-text">Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
                   </div>
                 </div>
-                <img src="img/photo-reason-2.jpg" alt="Фото моста">
+                <img src="img/photo-reason-2.jpg" width="800" height="256" alt="Фото моста">
               </div>
             </li>
 
@@ -128,16 +124,16 @@
           <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
 
           <div class="map">
-            <img src="img/map.jpg" alt="Карта местности">
+            <img src="img/map.jpg" width="100%" height="593px" alt="Карта местности">
           </div>
 
-          <form class="search-form" action="" method="POST">
+          <form class="search-form" action="#" method="POST">
             <div class="search-form-wrapper">
               <div class="date-wrapper">
                 <p>
                   <label for="arrival-date">Дата заезда:</label>
                   <input id="arrival-date" type="text" name="arrival" value="" placeholder="24 апреля 2017">
-                  <button class="calendar-btn" form="arrival-date">
+                  <button class="calendar-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path fill="#cacaca" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path fill="#cacaca" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
                   </button>
                 </p>
@@ -145,7 +141,7 @@
                 <p>
                   <label for="departure-date">Дата выезда:</label>
                   <input id="departure-date" type="text" name="departure" value="" placeholder="4 июля 2017">
-                  <button class="calendar-btn" form="arrival-date">
+                  <button class="calendar-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path fill="#cacaca" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path fill="#cacaca" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
                   </button>
                 </p>
@@ -159,7 +155,7 @@
                       <rect width="11" height="3" x="0" y="0"/>
                     </svg>
                   </button>
-                  <input id="calc-people calc-adults" type="text" name="adults" value="2">
+                  <input id="calc-adults" type="text" name="adults" value="2">
                   <button class="calc-btn btn-plus">
                     <svg width="11" height="11">
                       <rect width="3" height="11" x="4" y="0"/>
@@ -175,7 +171,7 @@
                       <rect width="11" height="3" x="0" y="0"/>
                     </svg>
                   </button>
-                  <input id="calc-people calc-children" type="text" name="children" value="0">
+                  <input id="calc-children" type="text" name="children" value="0">
                   <button class="calc-btn btn-plus">
                     <svg width="11" height="11">
                       <rect width="3" height="11" x="4" y="0"/>
@@ -200,9 +196,9 @@
           
           <div class="footer-social">
             <ul class="footer-social-list">
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" alt="Твитер" aria-label="Твитер"></a></li>
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" alt="Фейсбук" aria-label="Фейсбук"></a></li>
-              <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" alt="Ютубе" aria-label="Ютубе"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/twitter.svg" width="17" height="15" alt="Твитер" aria-label="Твитер"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/fb-icon.svg" width="12" height="22" alt="Фейсбук" aria-label="Фейсбук"></a></li>
+              <li><a class="social-button" href="#"><img src="img/svg-sedona/youtube.svg" width="20" height="16" alt="Ютубе" aria-label="Ютубе"></a></li>
             </ul>
           </div>
 
