Поправил ширину и высоту у карты и полигона

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
           <cite class="visually-hidden">Because the Grand Canyon sucks!</cite>
 
-          <img class="hello-polygon" src="img/polygon.png" alt="Polygon" width="100%" height="57px">
+          <img class="hello-polygon" src="img/polygon.png" alt="Polygon" width="1200" height="57">
         </section>
         <p class="attract">
           <b>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
@@ -124,7 +124,7 @@
           <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
 
           <div class="map">
-            <img src="img/map.jpg" width="100%" height="593px" alt="Карта местности">
+            <img src="img/map.jpg" width="1200" height="593" alt="Карта местности">
           </div>
 
           <form class="search-form" action="#" method="POST">
