Поправил размеры фотографий в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -111,7 +111,7 @@
           <ul class="catalog-list">
             <li class="catalog-item">
               <div class="catalog-item-wrapper">  
-                <img src="img/catalog-photo-1.jpg" width="135px" height="91px" alt="Amara resrt & spa" aria-label="Фото гостиницы Amara resrt & spa">
+                <img src="img/catalog-photo-1.jpg" width="135" height="91" alt="Amara resrt & spa" aria-label="Фото гостиницы Amara resrt & spa">
                 <div class="wrapper">
                   <a href="catalog-item.html">
                     <span class="catalog-item-title">Amara resort & spa</span>
@@ -137,7 +137,7 @@
             
             <li class="catalog-item">
               <div class="catalog-item-wrapper">
-                <img src="img/catalog-photo-2.jpg" width="135px" height="91px" alt="Desert quail inn" aria-label="Фото мотеля Desert quail inn">
+                <img src="img/catalog-photo-2.jpg" width="135" height="91" alt="Desert quail inn" aria-label="Фото мотеля Desert quail inn">
                 <div class="wrapper">
                   <a href="catalog-item.html">
                     <span class="catalog-item-title">Desert quail inn</span>
@@ -162,7 +162,7 @@
             
             <li class="catalog-item">
               <div class="catalog-item-wrapper">
-                <img src="img/catalog-photo-3.jpg" width="135px" height="91px" alt="Villas at poco diablo" aria-label="Фото апартаментов Villas at poco diablo">
+                <img src="img/catalog-photo-3.jpg" width="135" height="91" alt="Villas at poco diablo" aria-label="Фото апартаментов Villas at poco diablo">
                 <div class="wrapper">
                   <a href="catalog-item.html">
                     <span class="catalog-item-title">Villas at poco diablo</span>
