--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <a class="search-hotel-button" href="form.html">Поиск гостиницы в Седоне</a>
 
           <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565768234!2d-111.83015791712812!3d34.854443815377486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ+86336%2C+USA!5e0!3m2!1sen!2ses!4v1561415320350!5m2!1sen!2ses" width="1200" height="470" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565768234!2d-111.83015791712812!3d34.854443815377486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ+86336%2C+USA!5e0!3m2!1sen!2ses!4v1561415320350!5m2!1sen!2ses" width="1200" height="470" style="border:0" allowfullscreen></iframe>
           </div>
 
           <form class="search-form" action="#" method="POST">
