Исправление ошибок, подготовка к тре́тьей защите проекта

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="main-reasons-item">
               <div class="main-part-wrapper">
                 <div class="main-reasons-item-wrapper">
-                  <h3>Настоящий<br> городок</h3>
+                  <h3>Настоящий городок</h3>
                   <p class="main-reasons-number">— №1 —</p>
                   <p class="main-reasons-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
